styles/components/title.scss
.title {
    position: relative;
    margin-top:45%;
    @include on-breakpoint(tablet-up) {        
        left: 10%;
        margin-top: 10%;
        margin-left: -10px;
        margin-left: 15%;
    }
    @include respond(tab-land){
        // margin-left: 0%;
        margin-left: -70px;
        margin-top: 15%;
    } 
    @include respond(phone){
        margin-left:0%;
    } 
 
  }
  
  
  .sticker-great {
    width: 300px;
    text-align: center;
    background: var(--c-white);
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    transform: rotate(-3.92deg);
    margin-bottom: 25px;
  
   @include on-breakpoint(tablet-up) {
    width: 700px;
   }
  }
  
  .sticker-minds {
  margin-left: 50px;
  width: 300px;
  text-align: center;
  background: var(--c-white);
  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
  transform: rotate(-1.84deg);
  margin-bottom: 50px;
  @include on-breakpoint(tablet-up) {
    width: 700px;
  margin-bottom: 100px;

   }
  }
  
  .subtitle {
      font-size: 50px;
        line-height: 1;
  color: var(--c-text);


  }

  .section-title {
    font-size: 40px;
    line-height: 1;
    color: var(--c-text);
  }

